test/cases/parser/wrong_import_as/Main.errors
src/Main.b:4:15: Syntax error (expected name)
